-*-change-log-*-

0.5.0.0 Ross Paterson <R.Paterson@city.ac.uk> Dec 2015
	* Control.Monad.IO.Class in base for GHC >= 8.0
	* Added PolyKinds for GHC >= 7.4
	* Added instances of base classes MonadZip and MonadFail
	* Changed liftings of Prelude classes to use explicit dictionaries

0.4.3.0 Ross Paterson <R.Paterson@city.ac.uk> Mar 2015
	* Added Eq1, Ord1, Show1 and Read1 instances for Const

0.4.2.0 Ross Paterson <ross@soi.city.ac.uk> Nov 2014
	* Dropped compatibility with base-1.x
	* Data.Functor.Identity in base for GHC >= 7.10
	* Added mapLift and runErrors to Control.Applicative.Lift
	* Added AutoDeriveTypeable for GHC >= 7.10
	* Expanded messages from mfix on ExceptT and MaybeT

0.4.1.0 Ross Paterson <ross@soi.city.ac.uk> May 2014
	* Reverted to record syntax for newtypes until next major release

0.4.0.0 Ross Paterson <ross@soi.city.ac.uk> May 2014
	* Added Sum type
	* Added modify', a strict version of modify, to the state monads
	* Added ExceptT and deprecated ErrorT
	* Added infixr 9 `Compose` to match (.)
	* Added Eq, Ord, Read and Show instances where possible
	* Replaced record syntax for newtypes with separate inverse functions
	* Added delimited continuation functions to ContT
	* Added instance Alternative IO to ErrorT
	* Handled disappearance of Control.Monad.Instances

0.3.0.0 Ross Paterson <ross@soi.city.ac.uk> Mar 2012
	* Added type synonyms for signatures of complex operations
	* Generalized state, reader and writer constructor functions
	* Added Lift, Backwards/Reverse
	* Added MonadFix instances for IdentityT and MaybeT
	* Added Foldable and Traversable instances
	* Added Monad instances for Product

0.2.2.1 Ross Paterson <ross@soi.city.ac.uk> Oct 2013
	* Backport of fix for disappearance of Control.Monad.Instances

0.2.2.0 Ross Paterson <ross@soi.city.ac.uk> Sep 2010
	* Handled move of Either instances to base package

0.2.1.0 Ross Paterson <ross@soi.city.ac.uk> Apr 2010
	* Added Alternative instance for Compose
	* Added Data.Functor.Product
