@@ -2,8 +2,9 @@
 #if __GLASGOW_HASKELL__ >= 702
 {-# LANGUAGE Safe #-}
 #endif
-#if __GLASGOW_HASKELL__ >= 710
-{-# LANGUAGE AutoDeriveTypeable #-}
+#if __GLASGOW_HASKELL__ >= 708
+{-# LANGUAGE DeriveDataTypeable #-}
+{-# LANGUAGE StandaloneDeriving #-}
 #endif
 -----------------------------------------------------------------------------
 -- |
@@ -68,6 +69,9 @@ module Data.Functor.Classes (
 import Control.Applicative (Const(Const))
 import Data.Functor.Identity (Identity(Identity))
 import Data.Monoid (mappend)
+#if __GLASGOW_HASKELL__ >= 708
+import Data.Typeable
+#endif
 import Text.Show (showListWith)
 
 -- | Lifting of the 'Eq' class to unary type constructors.
@@ -79,6 +83,10 @@ class Eq1 f where
     -- it to compare elements of the first container with elements of
     -- the second.
     liftEq :: (a -> b -> Bool) -> f a -> f b -> Bool
+
+#if __GLASGOW_HASKELL__ >= 708
+deriving instance Typeable Eq1
+#endif
 
 -- | Lift the standard @('==')@ function through the type constructor.
 eq1 :: (Eq1 f, Eq a) => f a -> f a -> Bool
@@ -93,6 +101,10 @@ class (Eq1 f) => Ord1 f where
     -- it to compare elements of the first container with elements of
     -- the second.
     liftCompare :: (a -> b -> Ordering) -> f a -> f b -> Ordering
+
+#if __GLASGOW_HASKELL__ >= 708
+deriving instance Typeable Ord1
+#endif
 
 -- | Lift the standard 'compare' function through the type constructor.
 compare1 :: (Ord1 f, Ord a) => f a -> f a -> Ordering
@@ -110,6 +122,10 @@ class Read1 f where
     -- for most types.
     liftReadList :: (Int -> ReadS a) -> ReadS [a] -> ReadS [f a]
     liftReadList rp rl = readListWith (liftReadsPrec rp rl 0)
+
+#if __GLASGOW_HASKELL__ >= 708
+deriving instance Typeable Read1
+#endif
 
 -- | Read a list (using square brackets and commas), given a function
 -- for reading elements.
@@ -142,6 +158,10 @@ class Show1 f where
         [f a] -> ShowS
     liftShowList sp sl = showListWith (liftShowsPrec sp sl 0)
 
+#if __GLASGOW_HASKELL__ >= 708
+deriving instance Typeable Show1
+#endif
+
 -- | Lift the standard 'showsPrec' and 'showList' functions through the
 -- type constructor.
 showsPrec1 :: (Show1 f, Show a) => Int -> f a -> ShowS
@@ -157,6 +177,10 @@ class Eq2 f where
     -- the second.
     liftEq2 :: (a -> b -> Bool) -> (c -> d -> Bool) -> f a c -> f b d -> Bool
 
+#if __GLASGOW_HASKELL__ >= 708
+deriving instance Typeable Eq2
+#endif
+
 -- | Lift the standard @('==')@ function through the type constructor.
 eq2 :: (Eq2 f, Eq a, Eq b) => f a b -> f a b -> Bool
 eq2 = liftEq2 (==) (==)
@@ -171,6 +195,10 @@ class (Eq2 f) => Ord2 f where
     -- the second.
     liftCompare2 :: (a -> b -> Ordering) -> (c -> d -> Ordering) ->
         f a c -> f b d -> Ordering
+
+#if __GLASGOW_HASKELL__ >= 708
+deriving instance Typeable Ord2
+#endif
 
 -- | Lift the standard 'compare' function through the type constructor.
 compare2 :: (Ord2 f, Ord a, Ord b) => f a b -> f a b -> Ordering
@@ -192,6 +220,10 @@ class Read2 f where
     liftReadList2 rp1 rl1 rp2 rl2 =
         readListWith (liftReadsPrec2 rp1 rl1 rp2 rl2 0)
 
+#if __GLASGOW_HASKELL__ >= 708
+deriving instance Typeable Read2
+#endif
+
 -- | Lift the standard 'readsPrec' function through the type constructor.
 readsPrec2 :: (Read2 f, Read a, Read b) => Int -> ReadS (f a b)
 readsPrec2 = liftReadsPrec2 readsPrec readList readsPrec readList
@@ -211,6 +243,10 @@ class Show2 f where
         (Int -> b -> ShowS) -> ([b] -> ShowS) -> [f a b] -> ShowS
     liftShowList2 sp1 sl1 sp2 sl2 =
         showListWith (liftShowsPrec2 sp1 sl1 sp2 sl2 0)
+
+#if __GLASGOW_HASKELL__ >= 708
+deriving instance Typeable Show2
+#endif
 
 -- | Lift the standard 'showsPrec' function through the type constructor.
 showsPrec2 :: (Show2 f, Show a, Show b) => Int -> f a b -> ShowS
